--- a/servicos.html
+++ b/servicos.html
@@ -11,7 +11,7 @@
         <nav class="nav-bar">
             <img src="images/logo.png" alt="logo">
             <div class="buttons">
-                <button class="btn">Entre em contato</button>
+                <button class="btn" ><a href="contact.html">Entre em contato</a></button>
 
                 <div class="btn-voltar"><a href="home.html"><img src="images/arrow-back.png" alt="arrow-back"></a></div>
             </div>
