--- a/curriculo.html
+++ b/curriculo.html
@@ -12,16 +12,16 @@
     </header>
     <main class="conteiner">
         <div class="left">
-            <div class="perfil"><img src="images/perfil.png" alt="perfil"><div class="text">
+            <div class="perfil"><img src="perfil.png" alt="perfil"><div class="text">
                 <h1>raiane larisse ribeiro de lima</h1>
                     <p>Fisioterapeuta</p>
             </div></div>
             <div class="infos">
                 <ul>
-                    <li><img src="images/call.png" alt="call">75 999281624</li>
-                    <li><img src="images/mail.png" alt="mail">raiane2411@gmail.com</li>
-                    <li><img src="images/curriculum.png" alt="curriculum">Currículo Lattes: 2069824971598444</li>
-                    <li><img src="images/location.png" alt="location">Rua Nossa Senhora de Fátima, 172, Exposição, Lagarto - SE</li>
+                    <li><img src="call.png" alt="call">75 999281624</li>
+                    <li><img src="mail.png" alt="mail">raiane2411@gmail.com</li>
+                    <li><img src="curriculum.png" alt="curriculum">Currículo Lattes: 2069824971598444</li>
+                    <li><img src="location.png" alt="location">Rua Nossa Senhora de Fátima, 172, Exposição, Lagarto - SE</li>
                 </ul>
             </div><!--infos-->
             <div class="text-left">
@@ -43,8 +43,8 @@
                 <h1>referências</h1>
                 <ul>
                     <li>Profa. Dra. Sheila Schneiberg</li>
-                    <li><img src="images/call.png" alt="call">79 99834-0785</li>
-                    <li><img src="images/mail.png" alt="mail">sheilaschneiberg@academico.ufs.br</li>
+                    <li><img src="call.png" alt="call">79 99834-0785</li>
+                    <li><img src="mail.png" alt="mail">sheilaschneiberg@academico.ufs.br</li>
                 </ul>
                 
             </div><!--text-left-->
@@ -90,7 +90,7 @@
                 <li>Membro do Grupo de Pesquisa Multidisciplinar em Reabilitação Funcional  (GPMRF)</li>
                 <li>Ventosaterapia</li>
             </ul>
-            <a href="home.html"><img src="images/arrow-back.png" alt="arrow-back"></a>
+            <a href="home.html"><img src="arrow-back.png" alt="arrow-back"></a>
         </div><!--right-->
     </main>
     
