--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                 </div> <!--left-page-->
 
                     <div class="right-page"> 
-                        <img src="images/person.png
+                        <img src="person.png
                             " alt="person">
                         <div class="rodape-mobile">
                             <a href="https://www.instagram.com/raiane.la/" target="_blank" rel="external"><i class="fa-brands fa-instagram"></i></a>
