--- a/servicos.html
+++ b/servicos.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <img src="images/logo.png" alt="logo">
+            <img src="logo.png" alt="logo">
             <div class="buttons">
                 <button class="btn" ><a href="contact.html">Entre em contato</a></button>
 
-                <div class="btn-voltar"><a href="home.html"><img src="images/arrow-back.png" alt="arrow-back"></a></div>
+                <div class="btn-voltar"><a href="home.html"><img src="arrow-back.png" alt="arrow-back"></a></div>
             </div>
         </nav><!--nav-bar-->
     </header>
@@ -49,7 +49,7 @@
                 </div>
         </div><!--left-->
         <div class="right">
-            <img src="images/person.png" alt="person">           
+            <img src="person.png" alt="person">           
         </div><!--right-->
 
     </main>
