--- a/servicos.html
+++ b/servicos.html
@@ -42,7 +42,7 @@
                             <h1>Vantagens:</h1>
                             <ul>
                                 <li>Avaliação e atendimento no conforto do seu lar</li>
-                                <li>Fexibilidade dos horários</li>
+                                <li>Flexibilidade dos horários</li>
                                 <li>Melhora da qualidade de vida</li>
                             </ul>
                         </div><!--text3-->
